Fri Nov 28 00:53:37 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bsecxxsmart.h: Added resize() for sequences.

Wed Nov 26 22:14:44 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bserecords.idl: Proxy is gone.

Wed Nov 26 13:40:11 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bsecxxsmart.h: Added (template) classes for SmartPtr, RefCountable,
	Sequence, ... used for records.

	* tests/testsmart.cc: Test for the smartpointer stuff.

	* Makefile.am tests/Makefile.am: Corresponding Makefile entries.

Tue Nov 18 20:03:38 2003  Tim Janik  <timj@gtk.org>

	* engine-mplan.txt: renamed (from gsl-mplan.txt).

Tue Nov 18 18:51:53 2003  Tim Janik  <timj@gtk.org>

	* bsequery.c (main): fix root type handling.

	* bseobject.proc: removed.

Sun Nov 16 13:30:00 2003  Christian Neumair  <chris@gnome-de.org>

	* bsebiquadfilter.c: added xgettext keyword (no-c-format) comment
	to a string.

Mon Oct 27 22:12:48 2003  Tim Janik  <timj@gtk.org>

	* bseamplifier.[ic]*: from 0.5.5 on, let the amplifier default to
	multiply (and-ing) the two control inputs.

Mon Oct 27 00:39:10 2003  Tim Janik  <timj@gtk.org>

	* gslloader-oggvorbis.c: added application/ogg.

Sun Oct 26 09:38:12 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* bserecords.idl: Using // within a string now works (no longer
	treated as C++ comment start by sfidl).

Sat Oct 25 17:30:21 2003  Tim Janik  <timj@gtk.org>

	* bsesuper.c: introduce copyright compat property.

Sat Oct 25 02:05:14 2003  Tim Janik  <timj@gtk.org>

	* bsebiquadfilter.[hc]: nuked frequency fine-tune setting which was
	rather pointless.

	* bseamplifier.idl: fix compat balance ranges.

Sat Oct 25 01:49:50 2003  Tim Janik  <timj@gtk.org>

	* *.*: changed "copyright" field of procedures, scripts and objects
	into a "license" field which better reflects what we're asking for.

Sat Oct 18 05:06:27 2003  Tim Janik  <timj@gtk.org>

	* bsestorage.[hc]: keep track of items stored so far, and of items
	referenced so far.
